--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "buildP": "webpack --config webpack.config.dev.js",
-    "server": "webpack-dev-server --devtool eval --progress --colors --hot --content-base dist/",
+    "server": "webpack-dev-server --devtool eval --progress --colors --content-base dist/",
     "clean": "rm -rf dist && mkdir dist"
   },
   "repository": {
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/xiaoyunchen/easySlide",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
@@ -38,8 +39,10 @@
     "html-withimg-loader": "^0.1.16",
     "jquery": "^3.1.0",
     "jsx-loader": "^0.13.2",
+    "node-sass": "^3.10.1",
     "open-browser-webpack-plugin": "^0.0.2",
     "postcss": "^5.2.0",
+    "sass-loader": "^4.0.2",
     "sprite-webpack-plugin": "^0.3.6",
     "style-loader": "^0.13.1",
     "text-loader": "0.0.1",
