--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^3.10.1",
     "open-browser-webpack-plugin": "^0.0.2",
     "postcss": "^5.2.0",
+    "postcss-loader": "^1.0.0",
     "sass-loader": "^4.0.2",
     "sprite-webpack-plugin": "^0.3.6",
     "style-loader": "^0.13.1",
